--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,6 @@ html {
 
 .page__header-grey {
     background-color: #F6F2F2;
-    min-height: 690px;
 }
 
 .header {
@@ -73,4 +72,83 @@ html {
     text-transform: uppercase;
     text-decoration: none;
     color: #E0E0E0;
+}
+
+/* main intro */
+
+.page__content {
+    flex-grow: 1;
+}
+
+.page-grey {
+    background-color: #F6F2F2;
+}
+
+.intro {
+    padding-top: 102px;
+    padding-bottom: 94px;
+}
+
+.intro__content {
+    position: relative;
+    bottom: 12px;
+    width: 616px;
+    margin-bottom: 20px;
+    margin-right: 74px;
+}
+
+.intro__heading {
+    margin: 0;
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+.intro__text {
+    margin: 0;
+    line-height: 28px;
+    max-width: 520px;
+    margin-bottom: 60px;
+    margin-top: 36px;
+}
+
+.action-btn {
+    box-sizing: border-box;
+    display: inline-block;
+    width: 228px;
+    height: 56px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    padding: 16px 0;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 8px;
+    border: none;
+
+}
+
+.intro__btn {
+    font-size: 18px;
+    font-weight: 700;
+    color: #FFFFFF;
+    background-color: #ff2d2d;
+}
+
+.section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    max-width: 1250px;
+    margin: 0 auto;
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
+
+.intro__img {
+    max-width: 554px;
+    width: 100%;
+    max-height: 358px;
+    height: 100%;
 }
